# auto-board

./: .antigravityrules  .gitignore  CLAUDE.md  GEMINI.md  README.md  check_db.py  debug_req.py  env.local.sample  env.sample  jest.config.js  package-lock.json  package.json  pyproject.toml  pytest.ini  tailwind.config.js  test_debug_handlers.py  test_debug_path.py  test_log.py
.claude/: settings.local.json
.claude/output-styles/: coding-friend.md  settings.local.json
app/: main.py
app/constants/: data_type.py  display_type.py  element_type.py
app/core/: config.py  deps.py  logger.py  security.py
app/resources/sqls/: autoboard_ddl.sql
app/routes/: board.py  checker.py  files.py  home.py  records.py
app/schemas/: board.py  user.py
app/static/js/: board_manager.js  board_manager_logic.js  records.js
app/templates/: base.html  checker.html  index.html  login.html
app/templates/board/: create.html  delete_confirm.html  list.html  (+4 more)
app/utils/: db_manager.py
docs/: CHANGES_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  board.md  columns.md  create.md  create_edit.md  design.md  list.md  prompts.md  record.md  routings.md  step2.md  step2_list.md  step3_create_edit.md  step4_card_layout_update.md  step4_implementation_summary.md  step4_view.md  table.md  ui-improvements.md  view.md  wizard_steps.md  설계.md  테스트전략.md
examples/: step2_list_chatgpt.html  step2_list_claude.html  step2_list_deepseek.html  step2_list_gemini.html  step2_list_grok.html
tests/: conftest.py  test_db_manager.py
tests_js/: board_manager_logic.test.js  simple.test.js
tools/: clean_db.sh
(+14 files in other folders)
